[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Instances/Pen/PenButtonHelpWD.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Themes/Dark_theme1.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Sprites/Icons/DSGUI1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Buttons/SetupPanelBTN1_pressed.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Buttons/SetupPanelBTN1_hover.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Buttons/SetupPanelBTN1_normal.png" type="Texture" id=6]
[ext_resource path="res://Assets/Scripts/Buttons/SideNavigationBTNS1.gd" type="Script" id=7]
[ext_resource path="res://Assets/Scripts/Buttons/QuitBTN.gd" type="Script" id=8]
[ext_resource path="res://Assets/Scripts/Buttons/ResetAllButton1.gd" type="Script" id=9]
[ext_resource path="res://Assets/Scripts/Buttons/FPSLimit1.gd" type="Script" id=10]
[ext_resource path="res://Assets/Scripts/Buttons/ProfileListBox1.gd" type="Script" id=11]
[ext_resource path="res://Assets/Scripts/Buttons/TabletButtonModeList1.gd" type="Script" id=12]
[ext_resource path="res://Assets/Scripts/Buttons/TabletApplyBtn1.gd" type="Script" id=13]
[ext_resource path="res://Assets/Scripts/Buttons/ApplyAllTabletButtons1.gd" type="Script" id=14]
[ext_resource path="res://Assets/Scripts/Buttons/ResetAllTabletButtons1.gd" type="Script" id=15]
[ext_resource path="res://Assets/Sprites/Tablets/H950PTablet1.png" type="Texture" id=16]
[ext_resource path="res://Assets/Scripts/Buttons/PenTrackingMode1.gd" type="Script" id=17]
[ext_resource path="res://Assets/Scripts/Buttons/OrientationList1.gd" type="Script" id=18]

[node name="TabletMain" type="Node2D"]
__meta__ = {
"_edit_lock_": true
}

[node name="PenButtonHelpWD" parent="." instance=ExtResource( 1 )]
margin_left = 212.0
margin_top = 44.0
margin_right = 733.0
margin_bottom = 571.0

[node name="MasterPC" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 599.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="MasterHBC" type="HBoxContainer" parent="MasterPC"]
margin_right = 1024.0
margin_bottom = 599.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SideMC" type="MarginContainer" parent="MasterPC/MasterHBC"]
margin_right = 145.0
margin_bottom = 599.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_bottom = 4

[node name="VBC1" type="VBoxContainer" parent="MasterPC/MasterHBC/SideMC"]
margin_top = 4.0
margin_right = 141.0
margin_bottom = 595.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureFrame" type="TextureRect" parent="MasterPC/MasterHBC/SideMC/VBC1"]
margin_right = 64.0
margin_bottom = 64.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 3 )
stretch_mode = 3

[node name="HSeparator" type="HSeparator" parent="MasterPC/MasterHBC/SideMC/VBC1"]
margin_top = 68.0
margin_right = 3.0
margin_bottom = 72.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="WelcomeTB" type="TextureButton" parent="MasterPC/MasterHBC/SideMC/VBC1"]
margin_top = 126.0
margin_right = 141.0
margin_bottom = 158.0
focus_mode = 0
size_flags_horizontal = 2
size_flags_vertical = 2
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
script = ExtResource( 7 )
nextScene = "Welcome"

[node name="Label" type="Label" parent="MasterPC/MasterHBC/SideMC/VBC1/WelcomeTB"]
margin_left = 4.0
margin_right = 141.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Welcome"
valign = 1

[node name="SetupTB" type="TextureButton" parent="MasterPC/MasterHBC/SideMC/VBC1"]
margin_top = 185.0
margin_right = 141.0
margin_bottom = 217.0
focus_mode = 0
size_flags_horizontal = 2
size_flags_vertical = 2
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
script = ExtResource( 7 )
nextScene = "Setup"

[node name="Label" type="Label" parent="MasterPC/MasterHBC/SideMC/VBC1/SetupTB"]
margin_left = 4.0
margin_right = 141.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Setup"
valign = 1

[node name="PenSettings" type="TextureButton" parent="MasterPC/MasterHBC/SideMC/VBC1"]
margin_top = 243.0
margin_right = 141.0
margin_bottom = 275.0
focus_mode = 0
size_flags_horizontal = 2
size_flags_vertical = 2
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
script = ExtResource( 7 )
nextScene = "PenSettings"

[node name="Label" type="Label" parent="MasterPC/MasterHBC/SideMC/VBC1/PenSettings"]
margin_left = 4.0
margin_right = 141.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Pen Settings"
valign = 1

[node name="TabletSettings" type="TextureButton" parent="MasterPC/MasterHBC/SideMC/VBC1"]
margin_top = 302.0
margin_right = 141.0
margin_bottom = 334.0
focus_mode = 0
size_flags_horizontal = 2
size_flags_vertical = 2
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="MasterPC/MasterHBC/SideMC/VBC1/TabletSettings"]
margin_left = 4.0
margin_right = 141.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Tablet Settings"
valign = 1

[node name="MonitorSettings" type="TextureButton" parent="MasterPC/MasterHBC/SideMC/VBC1"]
margin_top = 360.0
margin_right = 141.0
margin_bottom = 392.0
focus_mode = 0
size_flags_horizontal = 2
size_flags_vertical = 2
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
script = ExtResource( 7 )
nextScene = "MonitorSettings"

[node name="Label" type="Label" parent="MasterPC/MasterHBC/SideMC/VBC1/MonitorSettings"]
margin_left = 4.0
margin_right = 141.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Monitor Settings"
valign = 1

[node name="Credits" type="TextureButton" parent="MasterPC/MasterHBC/SideMC/VBC1"]
margin_top = 419.0
margin_right = 141.0
margin_bottom = 451.0
focus_mode = 0
size_flags_horizontal = 2
size_flags_vertical = 2
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
script = ExtResource( 7 )
nextScene = "Credits"

[node name="Label" type="Label" parent="MasterPC/MasterHBC/SideMC/VBC1/Credits"]
margin_left = 4.0
margin_right = 141.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Credits"
valign = 1

[node name="Close" type="TextureButton" parent="MasterPC/MasterHBC/SideMC/VBC1"]
margin_top = 477.0
margin_right = 141.0
margin_bottom = 509.0
focus_mode = 0
size_flags_horizontal = 2
size_flags_vertical = 2
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
script = ExtResource( 8 )

[node name="Label" type="Label" parent="MasterPC/MasterHBC/SideMC/VBC1/Close"]
margin_left = 4.0
margin_right = 141.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Close"
valign = 1

[node name="FPSLimitVB" type="VBoxContainer" parent="MasterPC/MasterHBC/SideMC/VBC1"]
margin_top = 536.0
margin_right = 129.0
margin_bottom = 591.0
size_flags_horizontal = 2
size_flags_vertical = 3
alignment = 2

[node name="HSeparator" type="HSeparator" parent="MasterPC/MasterHBC/SideMC/VBC1/FPSLimitVB"]
margin_right = 3.0
margin_bottom = 4.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="ResetSettings" type="TextureButton" parent="MasterPC/MasterHBC/SideMC/VBC1/FPSLimitVB"]
visible = false
margin_top = 204.0
margin_right = 141.0
margin_bottom = 236.0
focus_mode = 0
size_flags_horizontal = 2
size_flags_vertical = 2
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
script = ExtResource( 9 )

[node name="Label" type="Label" parent="MasterPC/MasterHBC/SideMC/VBC1/FPSLimitVB/ResetSettings"]
margin_left = 4.0
margin_right = 141.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Reset Settings"
valign = 1

[node name="FPSLimitHB" type="HBoxContainer" parent="MasterPC/MasterHBC/SideMC/VBC1/FPSLimitVB"]
margin_top = 29.0
margin_right = 129.0
margin_bottom = 53.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="MasterPC/MasterHBC/SideMC/VBC1/FPSLimitVB/FPSLimitHB"]
margin_right = 59.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "FPS Limit"
valign = 1

[node name="VSeparator" type="VSeparator" parent="MasterPC/MasterHBC/SideMC/VBC1/FPSLimitVB/FPSLimitHB"]
margin_left = 63.0
margin_right = 67.0
margin_bottom = 3.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="LineEdit" type="LineEdit" parent="MasterPC/MasterHBC/SideMC/VBC1/FPSLimitVB/FPSLimitHB"]
margin_left = 71.0
margin_right = 129.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "30"
align = 1
max_length = 2
script = ExtResource( 10 )

[node name="OptionButton" type="OptionButton" parent="MasterPC/MasterHBC/SideMC/VBC1/FPSLimitVB"]
visible = false
margin_top = 232.0
margin_right = 141.0
margin_bottom = 264.0
focus_mode = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 0
script = ExtResource( 11 )

[node name="SeperatorHBC" type="VBoxContainer" parent="MasterPC/MasterHBC"]
visible = false
margin_left = 149.0
margin_right = 536.0
margin_bottom = 599.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="MasterPC/MasterHBC/SeperatorHBC"]
margin_right = 4.0
margin_bottom = 3.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="VSeparator1" type="VSeparator" parent="MasterPC/MasterHBC/SeperatorHBC"]
margin_top = 301.0
margin_right = 4.0
margin_bottom = 599.0
size_flags_horizontal = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MasterPC/MasterHBC"]
margin_left = 149.0
margin_right = 1024.0
margin_bottom = 599.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 32
custom_constants/margin_top = 12
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="MainHBC" type="VBoxContainer" parent="MasterPC/MasterHBC/MarginContainer"]
margin_left = 32.0
margin_top = 12.0
margin_right = 843.0
margin_bottom = 567.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 32

[node name="WelcomeLabel" type="HBoxContainer" parent="MasterPC/MasterHBC/MarginContainer/MainHBC"]
margin_right = 811.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/WelcomeLabel"]
margin_right = 94.0
margin_bottom = 14.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Tablet Settings"

[node name="HSeparator" type="HSeparator" parent="MasterPC/MasterHBC/MarginContainer/MainHBC"]
margin_top = 46.0
margin_right = 811.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MasterPC/MasterHBC/MarginContainer/MainHBC"]
margin_top = 82.0
margin_right = 811.0
margin_bottom = 555.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabletButtonsVBC" type="VBoxContainer" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer"]
margin_right = 403.0
margin_bottom = 473.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="BTN1" type="HBoxContainer" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC"]
margin_right = 102.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 8

[node name="Label" type="Label" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN1"]
visible = false
margin_top = 5.0
margin_right = 56.0
margin_bottom = 19.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Button-1"
align = 1

[node name="ModeBtn" type="OptionButton" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN1"]
visible = false
margin_right = 39.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
script = ExtResource( 12 )

[node name="Button" type="Button" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN1"]
margin_right = 36.0
margin_bottom = 14.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Apply"
script = ExtResource( 13 )

[node name="LineEdit" type="LineEdit" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN1"]
margin_left = 44.0
margin_right = 102.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="BTN2" type="HBoxContainer" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC"]
margin_top = 44.0
margin_right = 102.0
margin_bottom = 68.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 8

[node name="ModeBtn" type="OptionButton" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN2"]
visible = false
margin_right = 39.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
script = ExtResource( 12 )

[node name="Label" type="Label" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN2"]
visible = false
margin_top = 5.0
margin_right = 56.0
margin_bottom = 19.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Button-2"
align = 1

[node name="Button" type="Button" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN2"]
margin_right = 36.0
margin_bottom = 14.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Apply"
script = ExtResource( 13 )
btnID = 2
tabBtn = 4

[node name="LineEdit" type="LineEdit" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN2"]
margin_left = 44.0
margin_right = 102.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="BTN3" type="HBoxContainer" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC"]
margin_top = 88.0
margin_right = 102.0
margin_bottom = 112.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 8

[node name="ModeBtn" type="OptionButton" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN3"]
visible = false
margin_right = 39.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
script = ExtResource( 12 )

[node name="Label" type="Label" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN3"]
visible = false
margin_top = 5.0
margin_right = 56.0
margin_bottom = 19.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Button-3"
align = 1

[node name="Button" type="Button" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN3"]
margin_right = 36.0
margin_bottom = 14.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Apply"
script = ExtResource( 13 )
btnID = 3
tabBtn = 5

[node name="LineEdit" type="LineEdit" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN3"]
margin_left = 44.0
margin_right = 102.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="BTN4" type="HBoxContainer" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC"]
margin_top = 133.0
margin_right = 102.0
margin_bottom = 157.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 8

[node name="ModeBtn" type="OptionButton" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN4"]
visible = false
margin_right = 39.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
script = ExtResource( 12 )

[node name="Label" type="Label" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN4"]
visible = false
margin_top = 5.0
margin_right = 56.0
margin_bottom = 19.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Button-4"
align = 1

[node name="Button" type="Button" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN4"]
margin_right = 36.0
margin_bottom = 14.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Apply"
script = ExtResource( 13 )
btnID = 8
tabBtn = 6

[node name="LineEdit" type="LineEdit" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN4"]
margin_left = 44.0
margin_right = 102.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="HSeparator" type="HSeparator" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC"]
margin_top = 177.0
margin_right = 403.0
margin_bottom = 181.0
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="BTN5" type="HBoxContainer" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC"]
margin_top = 222.0
margin_right = 102.0
margin_bottom = 246.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 8

[node name="ModeBtn" type="OptionButton" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN5"]
visible = false
margin_right = 39.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
script = ExtResource( 12 )

[node name="Label" type="Label" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN5"]
visible = false
margin_top = 5.0
margin_right = 56.0
margin_bottom = 19.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Button-5"
align = 1

[node name="Button" type="Button" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN5"]
margin_right = 36.0
margin_bottom = 14.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Apply"
script = ExtResource( 13 )
btnID = 9
tabBtn = 7

[node name="LineEdit" type="LineEdit" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN5"]
margin_left = 44.0
margin_right = 102.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="BTN6" type="HBoxContainer" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC"]
margin_top = 266.0
margin_right = 102.0
margin_bottom = 290.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 8

[node name="ModeBtn" type="OptionButton" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN6"]
visible = false
margin_right = 39.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
script = ExtResource( 12 )

[node name="Label" type="Label" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN6"]
visible = false
margin_top = 5.0
margin_right = 56.0
margin_bottom = 19.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Button-6"
align = 1

[node name="Button" type="Button" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN6"]
margin_right = 36.0
margin_bottom = 14.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Apply"
script = ExtResource( 13 )
btnID = 10
tabBtn = 8

[node name="LineEdit" type="LineEdit" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN6"]
margin_left = 44.0
margin_right = 102.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="BTN7" type="HBoxContainer" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC"]
margin_top = 311.0
margin_right = 102.0
margin_bottom = 335.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 8

[node name="ModeBtn" type="OptionButton" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN7"]
visible = false
margin_right = 39.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
script = ExtResource( 12 )

[node name="Label" type="Label" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN7"]
visible = false
margin_top = 5.0
margin_right = 56.0
margin_bottom = 19.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Button-7"
align = 1

[node name="Button" type="Button" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN7"]
margin_right = 36.0
margin_bottom = 14.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Apply"
script = ExtResource( 13 )
btnID = 11
tabBtn = 9

[node name="LineEdit" type="LineEdit" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN7"]
margin_left = 44.0
margin_right = 102.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="BTN8" type="HBoxContainer" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC"]
margin_top = 355.0
margin_right = 102.0
margin_bottom = 379.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 8

[node name="ModeBtn" type="OptionButton" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN8"]
visible = false
margin_right = 39.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
script = ExtResource( 12 )

[node name="Label" type="Label" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN8"]
visible = false
margin_top = 5.0
margin_right = 56.0
margin_bottom = 19.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Button-8"
align = 1

[node name="Button" type="Button" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN8"]
margin_right = 36.0
margin_bottom = 14.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Apply"
script = ExtResource( 13 )
btnID = 12
tabBtn = 10

[node name="LineEdit" type="LineEdit" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN8"]
margin_left = 44.0
margin_right = 102.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="HSeparator1" type="HSeparator" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC"]
margin_top = 400.0
margin_right = 403.0
margin_bottom = 404.0
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="BTN9" type="HBoxContainer" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC"]
margin_top = 444.0
margin_right = 242.0
margin_bottom = 458.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 8

[node name="Button" type="Button" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN9"]
margin_right = 111.0
margin_bottom = 14.0
focus_mode = 0
size_flags_horizontal = 2
size_flags_vertical = 2
enabled_focus_mode = 0
text = "Apply All Buttons"
script = ExtResource( 14 )

[node name="VSeparator" type="VSeparator" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN9"]
margin_left = 119.0
margin_right = 123.0
margin_bottom = 3.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Button1" type="Button" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/TabletButtonsVBC/BTN9"]
margin_left = 131.0
margin_right = 242.0
margin_bottom = 14.0
focus_mode = 0
size_flags_horizontal = 2
size_flags_vertical = 2
enabled_focus_mode = 0
text = "Reset All Buttons"
script = ExtResource( 15 )

[node name="VBoxContainer" type="VBoxContainer" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer"]
margin_left = 407.0
margin_right = 811.0
margin_bottom = 473.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tablet" type="Sprite" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/VBoxContainer"]
position = Vector2( 208.001, 241.001 )
scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 16 )

[node name="Label" type="Label" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/VBoxContainer"]
margin_right = 166.0
margin_bottom = 234.0
size_flags_horizontal = 2
size_flags_vertical = 3
text = "Orientation: Right Handed"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 404.0
margin_bottom = 252.0
size_flags_horizontal = 3
size_flags_vertical = 2

[node name="PenTracking" type="Button" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 156.0
margin_bottom = 14.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Pen Tracking Mode : Pen"
align = 0
script = ExtResource( 17 )

[node name="TabletOrientation" type="OptionButton" parent="MasterPC/MasterHBC/MarginContainer/MainHBC/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 2
toggle_mode = false
script = ExtResource( 18 )
rotDir = "none"
Text = NodePath("../../Label")
TabletSprite = NodePath("../../Tablet")
